// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`JATS importer parses JATS AuthorQueries example to Manuscripts models 1`] = `
Array [
  Object {
    "_id": "MPTitles:test",
    "objectType": "MPTitles",
    "title": "LW4 Demo Doc basic – change title add date here",
  },
  Object {
    "_id": "MPManuscript:test",
    "acceptanceDate": 1599091200,
    "articleType": "other",
    "equationCount": 0,
    "figureCount": 0,
    "genericCounts": Array [
      Object {
        "count": 0,
        "countType": "box",
      },
    ],
    "objectType": "MPManuscript",
    "receiveDate": 1576195200,
    "referencesCount": 2,
    "revisionReceiveDate": 1597276800,
    "tableCount": 0,
    "wordCount": 2916,
  },
  Object {
    "_id": "MPCorresponding:test",
    "contents": "To whom correspondence should be addressed: Li Hui, PhD, Research Center of Biological Psychiatry, The Affiliated Guangji Hospital of Soochow University, No. 11 Guangqian Road, Suzhou 215137, Jiangsu Province, China, Tel: +86 51265794237; Fax: +86 51265794237, Email: huili004100@126.com.",
    "label": "*",
    "objectType": "MPCorresponding",
  },
  Object {
    "ISSNs": Array [
      Object {
        "ISSN": "0885-6222",
        "publicationType": "ppub",
      },
      Object {
        "ISSN": "1540-1235",
        "publicationType": "epub",
      },
    ],
    "_id": "MPJournal:test",
    "abbreviatedTitles": Array [
      Object {
        "abbrevType": "pubmed",
        "abbreviatedTitle": "Human Psychopharmacology: Clinical and Experimental",
      },
    ],
    "journalIdentifiers": Array [
      Object {
        "journalID": "HUP-19-0076",
        "journalIDType": "publisher-id",
      },
      Object {
        "journalID": "Human Psychopharmacology: Clinical and Experimental",
        "journalIDType": "nlm-ta",
      },
      Object {
        "journalID": "",
        "journalIDType": "doi",
      },
    ],
    "objectType": "MPJournal",
    "publisherName": "Atypon ReX",
    "title": "Human Psychopharmacology: Clinical and Experimental",
  },
  Object {
    "_id": "MPTitles:test",
    "objectType": "MPTitles",
    "runningTitle": "",
    "subtitle": "",
    "title": "",
  },
  Object {
    "_id": "MPSection:test",
    "elementIDs": Array [],
    "objectType": "MPSection",
    "path": Array [
      "MPSection:test",
    ],
    "priority": 1,
    "title": "",
  },
  Object {
    "_id": "MPCitation:test",
    "embeddedCitationItems": Array [
      Object {
        "_id": "MPCitationItem:test",
        "bibliographyItem": "MPBibliographyItem:test",
        "objectType": "MPCitationItem",
      },
    ],
    "objectType": "MPCitation",
  },
  Object {
    "_id": "MPCitation:test",
    "embeddedCitationItems": Array [
      Object {
        "_id": "MPCitationItem:test",
        "bibliographyItem": "MPBibliographyItem:test",
        "objectType": "MPCitationItem",
      },
    ],
    "objectType": "MPCitation",
  },
  Object {
    "_id": "MPCommentAnnotation:test",
    "annotationColor": "rgb(250, 224, 150)",
    "contents": "CrossRef reports the issue should be \\"4_suppl\\", not \\"4\\". (Ref. \\"Hor, Taylor, 2010\\")",
    "contributions": Array [
      Object {
        "_id": "MPContribution:test",
        "objectType": "MPContribution",
        "profileID": "MPUserProfile:test",
        "timestamp": 1111111111,
      },
    ],
    "objectType": "MPCommentAnnotation",
    "target": "MPBibliographyItem:test",
  },
  Object {
    "_id": "MPCommentAnnotation:test",
    "annotationColor": "rgb(250, 224, 150)",
    "contents": "CrossRef reports the issue should be \\"4_suppl\\", not \\"4\\". (Ref. \\"Hor, Taylor, 2010\\")",
    "contributions": Array [
      Object {
        "_id": "MPContribution:test",
        "objectType": "MPContribution",
        "profileID": "MPUserProfile:test",
        "timestamp": 1111111111,
      },
    ],
    "objectType": "MPCommentAnnotation",
    "target": "MPBibliographyItem:test",
  },
]
`;

exports[`JATS importer parses JATS article to Manuscripts models 1`] = `
Array [
  Object {
    "_id": "MPTitles:test",
    "objectType": "MPTitles",
    "title": "A complete manuscript",
  },
  Object {
    "_id": "MPManuscript:test",
    "articleType": "other",
    "equationCount": 0,
    "figureCount": 0,
    "genericCounts": Array [
      Object {
        "count": 0,
        "countType": "box",
      },
    ],
    "objectType": "MPManuscript",
    "referencesCount": 2,
    "tableCount": 0,
    "wordCount": 2910,
  },
  Object {
    "ISSNs": Array [],
    "_id": "MPJournal:test",
    "abbreviatedTitles": Array [],
    "journalIdentifiers": Array [],
    "objectType": "MPJournal",
  },
  Object {
    "_id": "MPTitles:test",
    "objectType": "MPTitles",
    "runningTitle": "",
    "subtitle": "",
    "title": "",
  },
  Object {
    "_id": "MPSection:test",
    "elementIDs": Array [],
    "objectType": "MPSection",
    "path": Array [
      "MPSection:test",
    ],
    "priority": 1,
    "title": "",
  },
  Object {
    "_id": "MPCitation:test",
    "embeddedCitationItems": Array [
      Object {
        "_id": "MPCitationItem:test",
        "bibliographyItem": "MPBibliographyItem:test",
        "objectType": "MPCitationItem",
      },
    ],
    "objectType": "MPCitation",
  },
  Object {
    "_id": "MPCitation:test",
    "embeddedCitationItems": Array [
      Object {
        "_id": "MPCitationItem:test",
        "bibliographyItem": "MPBibliographyItem:test",
        "objectType": "MPCitationItem",
      },
      Object {
        "_id": "MPCitationItem:test",
        "bibliographyItem": "MPBibliographyItem:test",
        "objectType": "MPCitationItem",
      },
    ],
    "objectType": "MPCitation",
  },
  Object {
    "_id": "MPCitation:test",
    "embeddedCitationItems": Array [
      Object {
        "_id": "MPCitationItem:test",
        "bibliographyItem": "MPBibliographyItem:test",
        "objectType": "MPCitationItem",
      },
      Object {
        "_id": "MPCitationItem:test",
        "bibliographyItem": "MPBibliographyItem:test",
        "objectType": "MPCitationItem",
      },
      Object {
        "_id": "MPCitationItem:test",
        "bibliographyItem": "MPBibliographyItem:test",
        "objectType": "MPCitationItem",
      },
    ],
    "objectType": "MPCitation",
  },
]
`;

exports[`JATS importer parses JATS article with tables and table footnotes 1`] = `
Array [
  Object {
    "_id": "MPTitles:test",
    "objectType": "MPTitles",
    "runningTitle": "low-dose anti-PD1 antibodies in cHL",
    "title": "Low-dose pembrolizumab and nivolumab were efficacious and safe in relapsed and refractory classical Hodgkin lymphoma: experience in a resource-constrained setting",
  },
  Object {
    "_id": "MPManuscript:test",
    "acceptanceDate": 1599004800,
    "articleType": "other",
    "equationCount": 0,
    "figureCount": 3,
    "genericCounts": Array [
      Object {
        "count": 0,
        "countType": "box",
      },
    ],
    "objectType": "MPManuscript",
    "receiveDate": 1588550400,
    "referencesCount": 21,
    "revisionReceiveDate": 1595721600,
    "tableCount": 3,
    "wordCount": 6069,
  },
  Object {
    "_id": "MPFootnote:test",
    "contents": "
          <p>Manuscript information</p>
        ",
    "kind": "footnote",
    "objectType": "MPFootnote",
  },
  Object {
    "_id": "MPCorresponding:test",
    "contents": "CorrespondenceY.L. Kwong, Department of Medicine, Professorial Block, Queen Mary Hospital, Pokfulam Road, Hong Kong, China, Email:
          ylkwong@hkucc.hku.hk",
    "objectType": "MPCorresponding",
  },
  Object {
    "ISSNs": Array [
      Object {
        "ISSN": "0278-0232",
        "publicationType": "ppub",
      },
      Object {
        "ISSN": "1540-1233",
        "publicationType": "epub",
      },
    ],
    "_id": "MPJournal:test",
    "abbreviatedTitles": Array [
      Object {
        "abbrevType": "pubmed",
        "abbreviatedTitle": "Hematological Oncology",
      },
    ],
    "journalIdentifiers": Array [
      Object {
        "journalID": "HON",
        "journalIDType": "publisher-id",
      },
      Object {
        "journalID": "Hematological Oncology",
        "journalIDType": "nlm-ta",
      },
      Object {
        "journalID": "",
        "journalIDType": "doi",
      },
    ],
    "objectType": "MPJournal",
    "publisherName": "John Wiley and Sons",
    "title": "Hematological Oncology",
  },
  Object {
    "_id": "MPTitles:test",
    "objectType": "MPTitles",
    "runningTitle": "",
    "subtitle": "",
    "title": "",
  },
  Object {
    "_id": "MPSection:test",
    "elementIDs": Array [],
    "objectType": "MPSection",
    "path": Array [
      "MPSection:test",
    ],
    "priority": 1,
    "title": "",
  },
  Object {
    "_id": "MPCitation:test",
    "embeddedCitationItems": Array [
      Object {
        "_id": "MPCitationItem:test",
        "bibliographyItem": "MPBibliographyItem:test",
        "objectType": "MPCitationItem",
      },
    ],
    "objectType": "MPCitation",
  },
  Object {
    "_id": "MPCitation:test",
    "embeddedCitationItems": Array [
      Object {
        "_id": "MPCitationItem:test",
        "bibliographyItem": "MPBibliographyItem:test",
        "objectType": "MPCitationItem",
      },
    ],
    "objectType": "MPCitation",
  },
  Object {
    "_id": "MPCitation:test",
    "embeddedCitationItems": Array [
      Object {
        "_id": "MPCitationItem:test",
        "bibliographyItem": "MPBibliographyItem:test",
        "objectType": "MPCitationItem",
      },
    ],
    "objectType": "MPCitation",
  },
  Object {
    "_id": "MPCitation:test",
    "embeddedCitationItems": Array [
      Object {
        "_id": "MPCitationItem:test",
        "bibliographyItem": "MPBibliographyItem:test",
        "objectType": "MPCitationItem",
      },
    ],
    "objectType": "MPCitation",
  },
  Object {
    "_id": "MPCitation:test",
    "embeddedCitationItems": Array [
      Object {
        "_id": "MPCitationItem:test",
        "bibliographyItem": "MPBibliographyItem:test",
        "objectType": "MPCitationItem",
      },
    ],
    "objectType": "MPCitation",
  },
  Object {
    "_id": "MPCitation:test",
    "embeddedCitationItems": Array [
      Object {
        "_id": "MPCitationItem:test",
        "bibliographyItem": "MPBibliographyItem:test",
        "objectType": "MPCitationItem",
      },
    ],
    "objectType": "MPCitation",
  },
  Object {
    "_id": "MPCitation:test",
    "embeddedCitationItems": Array [
      Object {
        "_id": "MPCitationItem:test",
        "bibliographyItem": "MPBibliographyItem:test",
        "objectType": "MPCitationItem",
      },
    ],
    "objectType": "MPCitation",
  },
  Object {
    "_id": "MPCitation:test",
    "embeddedCitationItems": Array [
      Object {
        "_id": "MPCitationItem:test",
        "bibliographyItem": "MPBibliographyItem:test",
        "objectType": "MPCitationItem",
      },
    ],
    "objectType": "MPCitation",
  },
  Object {
    "_id": "MPCitation:test",
    "embeddedCitationItems": Array [
      Object {
        "_id": "MPCitationItem:test",
        "bibliographyItem": "MPBibliographyItem:test",
        "objectType": "MPCitationItem",
      },
    ],
    "objectType": "MPCitation",
  },
  Object {
    "_id": "MPCitation:test",
    "embeddedCitationItems": Array [
      Object {
        "_id": "MPCitationItem:test",
        "bibliographyItem": "MPBibliographyItem:test",
        "objectType": "MPCitationItem",
      },
    ],
    "objectType": "MPCitation",
  },
  Object {
    "_id": "MPCitation:test",
    "embeddedCitationItems": Array [
      Object {
        "_id": "MPCitationItem:test",
        "bibliographyItem": "MPBibliographyItem:test",
        "objectType": "MPCitationItem",
      },
      Object {
        "_id": "MPCitationItem:test",
        "bibliographyItem": "MPBibliographyItem:test",
        "objectType": "MPCitationItem",
      },
    ],
    "objectType": "MPCitation",
  },
  Object {
    "_id": "MPCitation:test",
    "embeddedCitationItems": Array [
      Object {
        "_id": "MPCitationItem:test",
        "bibliographyItem": "MPBibliographyItem:test",
        "objectType": "MPCitationItem",
      },
    ],
    "objectType": "MPCitation",
  },
  Object {
    "_id": "MPCitation:test",
    "embeddedCitationItems": Array [
      Object {
        "_id": "MPCitationItem:test",
        "bibliographyItem": "MPBibliographyItem:test",
        "objectType": "MPCitationItem",
      },
    ],
    "objectType": "MPCitation",
  },
  Object {
    "_id": "MPCitation:test",
    "embeddedCitationItems": Array [
      Object {
        "_id": "MPCitationItem:test",
        "bibliographyItem": "MPBibliographyItem:test",
        "objectType": "MPCitationItem",
      },
      Object {
        "_id": "MPCitationItem:test",
        "bibliographyItem": "MPBibliographyItem:test",
        "objectType": "MPCitationItem",
      },
    ],
    "objectType": "MPCitation",
  },
  Object {
    "_id": "MPCitation:test",
    "embeddedCitationItems": Array [
      Object {
        "_id": "MPCitationItem:test",
        "bibliographyItem": "MPBibliographyItem:test",
        "objectType": "MPCitationItem",
      },
    ],
    "objectType": "MPCitation",
  },
  Object {
    "_id": "MPCitation:test",
    "embeddedCitationItems": Array [
      Object {
        "_id": "MPCitationItem:test",
        "bibliographyItem": "MPBibliographyItem:test",
        "objectType": "MPCitationItem",
      },
    ],
    "objectType": "MPCitation",
  },
  Object {
    "_id": "MPAuxiliaryObjectReference:test",
    "objectType": "MPAuxiliaryObjectReference",
  },
  Object {
    "_id": "MPAuxiliaryObjectReference:test",
    "objectType": "MPAuxiliaryObjectReference",
  },
  Object {
    "_id": "MPAuxiliaryObjectReference:test",
    "objectType": "MPAuxiliaryObjectReference",
  },
  Object {
    "_id": "MPCitation:test",
    "embeddedCitationItems": Array [
      Object {
        "_id": "MPCitationItem:test",
        "bibliographyItem": "MPBibliographyItem:test",
        "objectType": "MPCitationItem",
      },
      Object {
        "_id": "MPCitationItem:test",
        "bibliographyItem": "MPBibliographyItem:test",
        "objectType": "MPCitationItem",
      },
      Object {
        "_id": "MPCitationItem:test",
        "bibliographyItem": "MPBibliographyItem:test",
        "objectType": "MPCitationItem",
      },
      Object {
        "_id": "MPCitationItem:test",
        "bibliographyItem": "MPBibliographyItem:test",
        "objectType": "MPCitationItem",
      },
      Object {
        "_id": "MPCitationItem:test",
        "bibliographyItem": "MPBibliographyItem:test",
        "objectType": "MPCitationItem",
      },
    ],
    "objectType": "MPCitation",
  },
  Object {
    "_id": "MPCitation:test",
    "embeddedCitationItems": Array [
      Object {
        "_id": "MPCitationItem:test",
        "bibliographyItem": "MPBibliographyItem:test",
        "objectType": "MPCitationItem",
      },
    ],
    "objectType": "MPCitation",
  },
  Object {
    "_id": "MPCitation:test",
    "embeddedCitationItems": Array [
      Object {
        "_id": "MPCitationItem:test",
        "bibliographyItem": "MPBibliographyItem:test",
        "objectType": "MPCitationItem",
      },
    ],
    "objectType": "MPCitation",
  },
  Object {
    "_id": "MPCitation:test",
    "embeddedCitationItems": Array [
      Object {
        "_id": "MPCitationItem:test",
        "bibliographyItem": "MPBibliographyItem:test",
        "objectType": "MPCitationItem",
      },
    ],
    "objectType": "MPCitation",
  },
  Object {
    "_id": "MPCitation:test",
    "embeddedCitationItems": Array [
      Object {
        "_id": "MPCitationItem:test",
        "bibliographyItem": "MPBibliographyItem:test",
        "objectType": "MPCitationItem",
      },
    ],
    "objectType": "MPCitation",
  },
  Object {
    "_id": "MPAuxiliaryObjectReference:test",
    "objectType": "MPAuxiliaryObjectReference",
  },
  Object {
    "_id": "MPAuxiliaryObjectReference:test",
    "objectType": "MPAuxiliaryObjectReference",
  },
  Object {
    "_id": "MPAuxiliaryObjectReference:test",
    "objectType": "MPAuxiliaryObjectReference",
  },
  Object {
    "_id": "MPCitation:test",
    "embeddedCitationItems": Array [
      Object {
        "_id": "MPCitationItem:test",
        "bibliographyItem": "MPBibliographyItem:test",
        "objectType": "MPCitationItem",
      },
    ],
    "objectType": "MPCitation",
  },
  Object {
    "_id": "MPCitation:test",
    "embeddedCitationItems": Array [
      Object {
        "_id": "MPCitationItem:test",
        "bibliographyItem": "MPBibliographyItem:test",
        "objectType": "MPCitationItem",
      },
    ],
    "objectType": "MPCitation",
  },
  Object {
    "_id": "MPAuxiliaryObjectReference:test",
    "objectType": "MPAuxiliaryObjectReference",
  },
  Object {
    "_id": "MPAuxiliaryObjectReference:test",
    "objectType": "MPAuxiliaryObjectReference",
  },
  Object {
    "_id": "MPAuxiliaryObjectReference:test",
    "objectType": "MPAuxiliaryObjectReference",
  },
  Object {
    "_id": "MPAuxiliaryObjectReference:test",
    "objectType": "MPAuxiliaryObjectReference",
  },
  Object {
    "_id": "MPAuxiliaryObjectReference:test",
    "objectType": "MPAuxiliaryObjectReference",
  },
  Object {
    "_id": "MPAuxiliaryObjectReference:test",
    "objectType": "MPAuxiliaryObjectReference",
  },
  Object {
    "_id": "MPCitation:test",
    "embeddedCitationItems": Array [
      Object {
        "_id": "MPCitationItem:test",
        "bibliographyItem": "MPBibliographyItem:test",
        "objectType": "MPCitationItem",
      },
    ],
    "objectType": "MPCitation",
  },
  Object {
    "_id": "MPAuxiliaryObjectReference:test",
    "objectType": "MPAuxiliaryObjectReference",
  },
  Object {
    "_id": "MPAuxiliaryObjectReference:test",
    "objectType": "MPAuxiliaryObjectReference",
  },
  Object {
    "_id": "MPAuxiliaryObjectReference:test",
    "objectType": "MPAuxiliaryObjectReference",
  },
  Object {
    "_id": "MPCitation:test",
    "embeddedCitationItems": Array [
      Object {
        "_id": "MPCitationItem:test",
        "bibliographyItem": "MPBibliographyItem:test",
        "objectType": "MPCitationItem",
      },
    ],
    "objectType": "MPCitation",
  },
  Object {
    "_id": "MPCitation:test",
    "embeddedCitationItems": Array [
      Object {
        "_id": "MPCitationItem:test",
        "bibliographyItem": "MPBibliographyItem:test",
        "objectType": "MPCitationItem",
      },
    ],
    "objectType": "MPCitation",
  },
  Object {
    "_id": "MPCitation:test",
    "embeddedCitationItems": Array [
      Object {
        "_id": "MPCitationItem:test",
        "bibliographyItem": "MPBibliographyItem:test",
        "objectType": "MPCitationItem",
      },
    ],
    "objectType": "MPCitation",
  },
  Object {
    "_id": "MPCitation:test",
    "embeddedCitationItems": Array [
      Object {
        "_id": "MPCitationItem:test",
        "bibliographyItem": "MPBibliographyItem:test",
        "objectType": "MPCitationItem",
      },
      Object {
        "_id": "MPCitationItem:test",
        "bibliographyItem": "MPBibliographyItem:test",
        "objectType": "MPCitationItem",
      },
    ],
    "objectType": "MPCitation",
  },
  Object {
    "_id": "MPCitation:test",
    "embeddedCitationItems": Array [
      Object {
        "_id": "MPCitationItem:test",
        "bibliographyItem": "MPBibliographyItem:test",
        "objectType": "MPCitationItem",
      },
    ],
    "objectType": "MPCitation",
  },
  Object {
    "_id": "MPCitation:test",
    "embeddedCitationItems": Array [
      Object {
        "_id": "MPCitationItem:test",
        "bibliographyItem": "MPBibliographyItem:test",
        "objectType": "MPCitationItem",
      },
    ],
    "objectType": "MPCitation",
  },
  Object {
    "_id": "MPCitation:test",
    "embeddedCitationItems": Array [
      Object {
        "_id": "MPCitationItem:test",
        "bibliographyItem": "MPBibliographyItem:test",
        "objectType": "MPCitationItem",
      },
    ],
    "objectType": "MPCitation",
  },
  Object {
    "_id": "MPCitation:test",
    "embeddedCitationItems": Array [
      Object {
        "_id": "MPCitationItem:test",
        "bibliographyItem": "MPBibliographyItem:test",
        "objectType": "MPCitationItem",
      },
    ],
    "objectType": "MPCitation",
  },
  Object {
    "_id": "MPCitation:test",
    "embeddedCitationItems": Array [
      Object {
        "_id": "MPCitationItem:test",
        "bibliographyItem": "MPBibliographyItem:test",
        "objectType": "MPCitationItem",
      },
    ],
    "objectType": "MPCitation",
  },
  Object {
    "_id": "MPCitation:test",
    "embeddedCitationItems": Array [
      Object {
        "_id": "MPCitationItem:test",
        "bibliographyItem": "MPBibliographyItem:test",
        "objectType": "MPCitationItem",
      },
    ],
    "objectType": "MPCitation",
  },
  Object {
    "_id": "MPCitation:test",
    "embeddedCitationItems": Array [
      Object {
        "_id": "MPCitationItem:test",
        "bibliographyItem": "MPBibliographyItem:test",
        "objectType": "MPCitationItem",
      },
    ],
    "objectType": "MPCitation",
  },
  Object {
    "_id": "MPCitation:test",
    "embeddedCitationItems": Array [
      Object {
        "_id": "MPCitationItem:test",
        "bibliographyItem": "MPBibliographyItem:test",
        "objectType": "MPCitationItem",
      },
    ],
    "objectType": "MPCitation",
  },
  Object {
    "_id": "MPCitation:test",
    "embeddedCitationItems": Array [
      Object {
        "_id": "MPCitationItem:test",
        "bibliographyItem": "MPBibliographyItem:test",
        "objectType": "MPCitationItem",
      },
    ],
    "objectType": "MPCitation",
  },
  Object {
    "_id": "MPCitation:test",
    "embeddedCitationItems": Array [
      Object {
        "_id": "MPCitationItem:test",
        "bibliographyItem": "MPBibliographyItem:test",
        "objectType": "MPCitationItem",
      },
      Object {
        "_id": "MPCitationItem:test",
        "bibliographyItem": "MPBibliographyItem:test",
        "objectType": "MPCitationItem",
      },
      Object {
        "_id": "MPCitationItem:test",
        "bibliographyItem": "MPBibliographyItem:test",
        "objectType": "MPCitationItem",
      },
    ],
    "objectType": "MPCitation",
  },
  Object {
    "_id": "MPCitation:test",
    "embeddedCitationItems": Array [
      Object {
        "_id": "MPCitationItem:test",
        "bibliographyItem": "MPBibliographyItem:test",
        "objectType": "MPCitationItem",
      },
    ],
    "objectType": "MPCitation",
  },
  Object {
    "_id": "MPCitation:test",
    "embeddedCitationItems": Array [
      Object {
        "_id": "MPCitationItem:test",
        "bibliographyItem": "MPBibliographyItem:test",
        "objectType": "MPCitationItem",
      },
    ],
    "objectType": "MPCitation",
  },
  Object {
    "_id": "MPCitation:test",
    "embeddedCitationItems": Array [
      Object {
        "_id": "MPCitationItem:test",
        "bibliographyItem": "MPBibliographyItem:test",
        "objectType": "MPCitationItem",
      },
    ],
    "objectType": "MPCitation",
  },
  Object {
    "_id": "MPCitation:test",
    "embeddedCitationItems": Array [
      Object {
        "_id": "MPCitationItem:test",
        "bibliographyItem": "MPBibliographyItem:test",
        "objectType": "MPCitationItem",
      },
    ],
    "objectType": "MPCitation",
  },
]
`;

exports[`JATS importer parses JATS front only example to Manuscripts models 1`] = `
Array [
  Object {
    "_id": "MPTitles:test",
    "objectType": "MPTitles",
    "title": "A complete manuscript",
  },
  Object {
    "_id": "MPManuscript:test",
    "articleType": "other",
    "equationCount": 0,
    "figureCount": 0,
    "genericCounts": Array [
      Object {
        "count": 0,
        "countType": "box",
      },
    ],
    "objectType": "MPManuscript",
    "referencesCount": 2,
    "tableCount": 0,
    "wordCount": 2910,
  },
  Object {
    "ISSNs": Array [],
    "_id": "MPJournal:test",
    "abbreviatedTitles": Array [],
    "journalIdentifiers": Array [],
    "objectType": "MPJournal",
  },
]
`;

exports[`JATS importer parses JATS front to Manuscripts models 1`] = `
Array [
  Object {
    "_id": "MPTitles:test",
    "objectType": "MPTitles",
    "title": "A complete manuscript",
  },
  Object {
    "_id": "MPManuscript:test",
    "equationCount": 0,
    "figureCount": 0,
    "genericCounts": Array [
      Object {
        "count": 0,
        "countType": "box",
      },
    ],
    "objectType": "MPManuscript",
    "referencesCount": 2,
    "tableCount": 0,
    "wordCount": 2910,
  },
  Object {
    "ISSNs": Array [],
    "_id": "MPJournal:test",
    "abbreviatedTitles": Array [],
    "journalIdentifiers": Array [],
    "objectType": "MPJournal",
  },
]
`;

exports[`JATS importer parses full JATS body to a ProseMirror doc 1`] = `
Object {
  "content": Array [
    Object {
      "attrs": Object {
        "dataTracked": null,
        "runningTitle": "",
        "subtitle": "",
        "title": "",
      },
      "type": "titles",
    },
    Object {
      "attrs": Object {
        "category": "",
        "comments": null,
        "dataTracked": null,
        "generatedLabel": undefined,
        "pageBreakStyle": undefined,
        "titleSuppressed": false,
      },
      "content": Array [
        Object {
          "attrs": Object {
            "dataTracked": null,
          },
          "type": "section_title",
        },
      ],
      "type": "section",
    },
    Object {
      "content": Array [
        Object {
          "type": "comment_list",
        },
      ],
      "type": "meta_section",
    },
  ],
  "type": "manuscript",
}
`;

exports[`JATS importer parses full JATS example to Manuscripts models 1`] = `
Array [
  Object {
    "_id": "MPTitles:test",
    "objectType": "MPTitles",
    "title": "WHEN ELECTIONS FAIL TO RESOLVE UNCERTAINTY: THE CASE OF THE 2016 U.S. <b>PRESIDENTIAL ELECTION</b>",
  },
  Object {
    "_id": "MPManuscript:test",
    "acceptanceDate": 899683200,
    "articleType": "research-article",
    "objectType": "MPManuscript",
    "receiveDate": 886636800,
    "revisionReceiveDate": 898646400,
    "revisionRequestDate": 892512000,
  },
  Object {
    "ISSNs": Array [
      Object {
        "ISSN": "1878-108X",
      },
    ],
    "_id": "MPJournal:test",
    "abbreviatedTitles": Array [
      Object {
        "abbrevType": "pubmed",
        "abbreviatedTitle": "NLM-Export",
      },
    ],
    "journalIdentifiers": Array [
      Object {
        "journalID": "NLM-Export",
        "journalIDType": "publisher-id",
      },
      Object {
        "journalID": "NLM-Export",
        "journalIDType": "nlm-ta",
      },
    ],
    "objectType": "MPJournal",
    "publisherName": "Inera",
    "title": "NLM-Export",
  },
  Object {
    "_id": "MPTitles:test",
    "objectType": "MPTitles",
    "runningTitle": "",
    "subtitle": "",
    "title": "",
  },
  Object {
    "_id": "MPSection:test",
    "elementIDs": Array [],
    "objectType": "MPSection",
    "path": Array [
      "MPSection:test",
    ],
    "priority": 1,
    "title": "",
  },
  Object {
    "_id": "MPAuxiliaryObjectReference:test",
    "objectType": "MPAuxiliaryObjectReference",
  },
  Object {
    "_id": "MPCitation:test",
    "embeddedCitationItems": Array [
      Object {
        "_id": "MPCitationItem:test",
        "bibliographyItem": "MPBibliographyItem:test",
        "objectType": "MPCitationItem",
      },
    ],
    "objectType": "MPCitation",
  },
  Object {
    "_id": "MPCitation:test",
    "embeddedCitationItems": Array [
      Object {
        "_id": "MPCitationItem:test",
        "bibliographyItem": "MPBibliographyItem:test",
        "objectType": "MPCitationItem",
      },
    ],
    "objectType": "MPCitation",
  },
  Object {
    "_id": "MPCitation:test",
    "embeddedCitationItems": Array [
      Object {
        "_id": "MPCitationItem:test",
        "bibliographyItem": "MPBibliographyItem:test",
        "objectType": "MPCitationItem",
      },
    ],
    "objectType": "MPCitation",
  },
  Object {
    "_id": "MPCitation:test",
    "embeddedCitationItems": Array [
      Object {
        "_id": "MPCitationItem:test",
        "bibliographyItem": "MPBibliographyItem:test",
        "objectType": "MPCitationItem",
      },
    ],
    "objectType": "MPCitation",
  },
  Object {
    "_id": "MPCitation:test",
    "embeddedCitationItems": Array [
      Object {
        "_id": "MPCitationItem:test",
        "bibliographyItem": "MPBibliographyItem:test",
        "objectType": "MPCitationItem",
      },
    ],
    "objectType": "MPCitation",
  },
  Object {
    "_id": "MPCitation:test",
    "embeddedCitationItems": Array [
      Object {
        "_id": "MPCitationItem:test",
        "bibliographyItem": "MPBibliographyItem:test",
        "objectType": "MPCitationItem",
      },
    ],
    "objectType": "MPCitation",
  },
  Object {
    "_id": "MPCitation:test",
    "embeddedCitationItems": Array [
      Object {
        "_id": "MPCitationItem:test",
        "bibliographyItem": "MPBibliographyItem:test",
        "objectType": "MPCitationItem",
      },
    ],
    "objectType": "MPCitation",
  },
  Object {
    "_id": "MPCitation:test",
    "embeddedCitationItems": Array [
      Object {
        "_id": "MPCitationItem:test",
        "bibliographyItem": "MPBibliographyItem:test",
        "objectType": "MPCitationItem",
      },
    ],
    "objectType": "MPCitation",
  },
  Object {
    "_id": "MPCitation:test",
    "embeddedCitationItems": Array [
      Object {
        "_id": "MPCitationItem:test",
        "bibliographyItem": "MPBibliographyItem:test",
        "objectType": "MPCitationItem",
      },
    ],
    "objectType": "MPCitation",
  },
  Object {
    "_id": "MPCitation:test",
    "embeddedCitationItems": Array [
      Object {
        "_id": "MPCitationItem:test",
        "bibliographyItem": "MPBibliographyItem:test",
        "objectType": "MPCitationItem",
      },
    ],
    "objectType": "MPCitation",
  },
  Object {
    "_id": "MPCitation:test",
    "embeddedCitationItems": Array [
      Object {
        "_id": "MPCitationItem:test",
        "bibliographyItem": "MPBibliographyItem:test",
        "objectType": "MPCitationItem",
      },
    ],
    "objectType": "MPCitation",
  },
  Object {
    "_id": "MPCitation:test",
    "embeddedCitationItems": Array [
      Object {
        "_id": "MPCitationItem:test",
        "bibliographyItem": "MPBibliographyItem:test",
        "objectType": "MPCitationItem",
      },
    ],
    "objectType": "MPCitation",
  },
  Object {
    "_id": "MPCitation:test",
    "embeddedCitationItems": Array [
      Object {
        "_id": "MPCitationItem:test",
        "bibliographyItem": "MPBibliographyItem:test",
        "objectType": "MPCitationItem",
      },
    ],
    "objectType": "MPCitation",
  },
  Object {
    "_id": "MPCitation:test",
    "embeddedCitationItems": Array [
      Object {
        "_id": "MPCitationItem:test",
        "bibliographyItem": "MPBibliographyItem:test",
        "objectType": "MPCitationItem",
      },
    ],
    "objectType": "MPCitation",
  },
  Object {
    "_id": "MPCitation:test",
    "embeddedCitationItems": Array [
      Object {
        "_id": "MPCitationItem:test",
        "bibliographyItem": "MPBibliographyItem:test",
        "objectType": "MPCitationItem",
      },
    ],
    "objectType": "MPCitation",
  },
  Object {
    "_id": "MPCitation:test",
    "embeddedCitationItems": Array [
      Object {
        "_id": "MPCitationItem:test",
        "bibliographyItem": "MPBibliographyItem:test",
        "objectType": "MPCitationItem",
      },
    ],
    "objectType": "MPCitation",
  },
  Object {
    "_id": "MPCitation:test",
    "embeddedCitationItems": Array [
      Object {
        "_id": "MPCitationItem:test",
        "bibliographyItem": "MPBibliographyItem:test",
        "objectType": "MPCitationItem",
      },
    ],
    "objectType": "MPCitation",
  },
  Object {
    "_id": "MPCitation:test",
    "embeddedCitationItems": Array [
      Object {
        "_id": "MPCitationItem:test",
        "bibliographyItem": "MPBibliographyItem:test",
        "objectType": "MPCitationItem",
      },
    ],
    "objectType": "MPCitation",
  },
  Object {
    "_id": "MPCitation:test",
    "embeddedCitationItems": Array [
      Object {
        "_id": "MPCitationItem:test",
        "bibliographyItem": "MPBibliographyItem:test",
        "objectType": "MPCitationItem",
      },
    ],
    "objectType": "MPCitation",
  },
  Object {
    "_id": "MPCitation:test",
    "embeddedCitationItems": Array [
      Object {
        "_id": "MPCitationItem:test",
        "bibliographyItem": "MPBibliographyItem:test",
        "objectType": "MPCitationItem",
      },
    ],
    "objectType": "MPCitation",
  },
  Object {
    "_id": "MPCitation:test",
    "embeddedCitationItems": Array [
      Object {
        "_id": "MPCitationItem:test",
        "bibliographyItem": "MPBibliographyItem:test",
        "objectType": "MPCitationItem",
      },
    ],
    "objectType": "MPCitation",
  },
  Object {
    "_id": "MPCitation:test",
    "embeddedCitationItems": Array [
      Object {
        "_id": "MPCitationItem:test",
        "bibliographyItem": "MPBibliographyItem:test",
        "objectType": "MPCitationItem",
      },
    ],
    "objectType": "MPCitation",
  },
  Object {
    "_id": "MPCitation:test",
    "embeddedCitationItems": Array [
      Object {
        "_id": "MPCitationItem:test",
        "bibliographyItem": "MPBibliographyItem:test",
        "objectType": "MPCitationItem",
      },
    ],
    "objectType": "MPCitation",
  },
  Object {
    "_id": "MPCitation:test",
    "embeddedCitationItems": Array [
      Object {
        "_id": "MPCitationItem:test",
        "bibliographyItem": "MPBibliographyItem:test",
        "objectType": "MPCitationItem",
      },
    ],
    "objectType": "MPCitation",
  },
  Object {
    "_id": "MPAuxiliaryObjectReference:test",
    "objectType": "MPAuxiliaryObjectReference",
  },
  Object {
    "_id": "MPCitation:test",
    "embeddedCitationItems": Array [
      Object {
        "_id": "MPCitationItem:test",
        "bibliographyItem": "MPBibliographyItem:test",
        "objectType": "MPCitationItem",
      },
    ],
    "objectType": "MPCitation",
  },
  Object {
    "_id": "MPCitation:test",
    "embeddedCitationItems": Array [
      Object {
        "_id": "MPCitationItem:test",
        "bibliographyItem": "MPBibliographyItem:test",
        "objectType": "MPCitationItem",
      },
    ],
    "objectType": "MPCitation",
  },
  Object {
    "_id": "MPAuxiliaryObjectReference:test",
    "objectType": "MPAuxiliaryObjectReference",
  },
  Object {
    "_id": "MPAuxiliaryObjectReference:test",
    "objectType": "MPAuxiliaryObjectReference",
  },
  Object {
    "_id": "MPAuxiliaryObjectReference:test",
    "objectType": "MPAuxiliaryObjectReference",
  },
  Object {
    "_id": "MPAuxiliaryObjectReference:test",
    "objectType": "MPAuxiliaryObjectReference",
  },
  Object {
    "_id": "MPAuxiliaryObjectReference:test",
    "objectType": "MPAuxiliaryObjectReference",
  },
  Object {
    "_id": "MPAuxiliaryObjectReference:test",
    "objectType": "MPAuxiliaryObjectReference",
  },
  Object {
    "_id": "MPAuxiliaryObjectReference:test",
    "objectType": "MPAuxiliaryObjectReference",
  },
  Object {
    "_id": "MPAuxiliaryObjectReference:test",
    "objectType": "MPAuxiliaryObjectReference",
  },
  Object {
    "_id": "MPAuxiliaryObjectReference:test",
    "objectType": "MPAuxiliaryObjectReference",
  },
  Object {
    "_id": "MPAuxiliaryObjectReference:test",
    "objectType": "MPAuxiliaryObjectReference",
  },
  Object {
    "_id": "MPCitation:test",
    "embeddedCitationItems": Array [
      Object {
        "_id": "MPCitationItem:test",
        "bibliographyItem": "MPBibliographyItem:test",
        "objectType": "MPCitationItem",
      },
    ],
    "objectType": "MPCitation",
  },
  Object {
    "_id": "MPAuxiliaryObjectReference:test",
    "objectType": "MPAuxiliaryObjectReference",
  },
  Object {
    "_id": "MPCitation:test",
    "embeddedCitationItems": Array [
      Object {
        "_id": "MPCitationItem:test",
        "bibliographyItem": "MPBibliographyItem:test",
        "objectType": "MPCitationItem",
      },
    ],
    "objectType": "MPCitation",
  },
  Object {
    "_id": "MPAuxiliaryObjectReference:test",
    "objectType": "MPAuxiliaryObjectReference",
  },
  Object {
    "_id": "MPCitation:test",
    "embeddedCitationItems": Array [
      Object {
        "_id": "MPCitationItem:test",
        "bibliographyItem": "MPBibliographyItem:test",
        "objectType": "MPCitationItem",
      },
    ],
    "objectType": "MPCitation",
  },
  Object {
    "_id": "MPAuxiliaryObjectReference:test",
    "objectType": "MPAuxiliaryObjectReference",
  },
  Object {
    "_id": "MPAuxiliaryObjectReference:test",
    "objectType": "MPAuxiliaryObjectReference",
  },
  Object {
    "_id": "MPCitation:test",
    "embeddedCitationItems": Array [
      Object {
        "_id": "MPCitationItem:test",
        "bibliographyItem": "MPBibliographyItem:test",
        "objectType": "MPCitationItem",
      },
    ],
    "objectType": "MPCitation",
  },
  Object {
    "_id": "MPCitation:test",
    "embeddedCitationItems": Array [
      Object {
        "_id": "MPCitationItem:test",
        "bibliographyItem": "MPBibliographyItem:test",
        "objectType": "MPCitationItem",
      },
    ],
    "objectType": "MPCitation",
  },
  Object {
    "_id": "MPAuxiliaryObjectReference:test",
    "objectType": "MPAuxiliaryObjectReference",
  },
  Object {
    "_id": "MPAuxiliaryObjectReference:test",
    "objectType": "MPAuxiliaryObjectReference",
  },
  Object {
    "_id": "MPAuxiliaryObjectReference:test",
    "objectType": "MPAuxiliaryObjectReference",
  },
  Object {
    "_id": "MPAuxiliaryObjectReference:test",
    "objectType": "MPAuxiliaryObjectReference",
  },
  Object {
    "_id": "MPAuxiliaryObjectReference:test",
    "objectType": "MPAuxiliaryObjectReference",
  },
  Object {
    "_id": "MPAuxiliaryObjectReference:test",
    "objectType": "MPAuxiliaryObjectReference",
  },
  Object {
    "_id": "MPAuxiliaryObjectReference:test",
    "objectType": "MPAuxiliaryObjectReference",
  },
  Object {
    "_id": "MPAuxiliaryObjectReference:test",
    "objectType": "MPAuxiliaryObjectReference",
  },
  Object {
    "_id": "MPAuxiliaryObjectReference:test",
    "objectType": "MPAuxiliaryObjectReference",
  },
  Object {
    "_id": "MPAuxiliaryObjectReference:test",
    "objectType": "MPAuxiliaryObjectReference",
  },
  Object {
    "_id": "MPAuxiliaryObjectReference:test",
    "objectType": "MPAuxiliaryObjectReference",
  },
  Object {
    "_id": "MPAuxiliaryObjectReference:test",
    "objectType": "MPAuxiliaryObjectReference",
  },
  Object {
    "_id": "MPAuxiliaryObjectReference:test",
    "objectType": "MPAuxiliaryObjectReference",
  },
  Object {
    "_id": "MPCitation:test",
    "embeddedCitationItems": Array [
      Object {
        "_id": "MPCitationItem:test",
        "bibliographyItem": "MPBibliographyItem:test",
        "objectType": "MPCitationItem",
      },
    ],
    "objectType": "MPCitation",
  },
  Object {
    "_id": "MPCitation:test",
    "embeddedCitationItems": Array [
      Object {
        "_id": "MPCitationItem:test",
        "bibliographyItem": "MPBibliographyItem:test",
        "objectType": "MPCitationItem",
      },
    ],
    "objectType": "MPCitation",
  },
  Object {
    "_id": "MPAuxiliaryObjectReference:test",
    "objectType": "MPAuxiliaryObjectReference",
  },
  Object {
    "_id": "MPAuxiliaryObjectReference:test",
    "objectType": "MPAuxiliaryObjectReference",
  },
  Object {
    "_id": "MPAuxiliaryObjectReference:test",
    "objectType": "MPAuxiliaryObjectReference",
  },
  Object {
    "_id": "MPAuxiliaryObjectReference:test",
    "objectType": "MPAuxiliaryObjectReference",
  },
  Object {
    "_id": "MPAuxiliaryObjectReference:test",
    "objectType": "MPAuxiliaryObjectReference",
  },
  Object {
    "_id": "MPCitation:test",
    "embeddedCitationItems": Array [
      Object {
        "_id": "MPCitationItem:test",
        "bibliographyItem": "MPBibliographyItem:test",
        "objectType": "MPCitationItem",
      },
    ],
    "objectType": "MPCitation",
  },
  Object {
    "_id": "MPCitation:test",
    "embeddedCitationItems": Array [
      Object {
        "_id": "MPCitationItem:test",
        "bibliographyItem": "MPBibliographyItem:test",
        "objectType": "MPCitationItem",
      },
    ],
    "objectType": "MPCitation",
  },
  Object {
    "_id": "MPCitation:test",
    "embeddedCitationItems": Array [
      Object {
        "_id": "MPCitationItem:test",
        "bibliographyItem": "MPBibliographyItem:test",
        "objectType": "MPCitationItem",
      },
    ],
    "objectType": "MPCitation",
  },
  Object {
    "_id": "MPCitation:test",
    "embeddedCitationItems": Array [
      Object {
        "_id": "MPCitationItem:test",
        "bibliographyItem": "MPBibliographyItem:test",
        "objectType": "MPCitationItem",
      },
    ],
    "objectType": "MPCitation",
  },
  Object {
    "_id": "MPCitation:test",
    "embeddedCitationItems": Array [
      Object {
        "_id": "MPCitationItem:test",
        "bibliographyItem": "MPBibliographyItem:test",
        "objectType": "MPCitationItem",
      },
    ],
    "objectType": "MPCitation",
  },
  Object {
    "_id": "MPCitation:test",
    "embeddedCitationItems": Array [
      Object {
        "_id": "MPCitationItem:test",
        "bibliographyItem": "MPBibliographyItem:test",
        "objectType": "MPCitationItem",
      },
    ],
    "objectType": "MPCitation",
  },
  Object {
    "_id": "MPCitation:test",
    "embeddedCitationItems": Array [
      Object {
        "_id": "MPCitationItem:test",
        "bibliographyItem": "MPBibliographyItem:test",
        "objectType": "MPCitationItem",
      },
    ],
    "objectType": "MPCitation",
  },
  Object {
    "_id": "MPCitation:test",
    "embeddedCitationItems": Array [
      Object {
        "_id": "MPCitationItem:test",
        "bibliographyItem": "MPBibliographyItem:test",
        "objectType": "MPCitationItem",
      },
    ],
    "objectType": "MPCitation",
  },
  Object {
    "_id": "MPCitation:test",
    "embeddedCitationItems": Array [
      Object {
        "_id": "MPCitationItem:test",
        "bibliographyItem": "MPBibliographyItem:test",
        "objectType": "MPCitationItem",
      },
    ],
    "objectType": "MPCitation",
  },
  Object {
    "_id": "MPCitation:test",
    "embeddedCitationItems": Array [
      Object {
        "_id": "MPCitationItem:test",
        "bibliographyItem": "MPBibliographyItem:test",
        "objectType": "MPCitationItem",
      },
    ],
    "objectType": "MPCitation",
  },
  Object {
    "_id": "MPCitation:test",
    "embeddedCitationItems": Array [
      Object {
        "_id": "MPCitationItem:test",
        "bibliographyItem": "MPBibliographyItem:test",
        "objectType": "MPCitationItem",
      },
    ],
    "objectType": "MPCitation",
  },
  Object {
    "_id": "MPCitation:test",
    "embeddedCitationItems": Array [
      Object {
        "_id": "MPCitationItem:test",
        "bibliographyItem": "MPBibliographyItem:test",
        "objectType": "MPCitationItem",
      },
    ],
    "objectType": "MPCitation",
  },
  Object {
    "_id": "MPCitation:test",
    "embeddedCitationItems": Array [
      Object {
        "_id": "MPCitationItem:test",
        "bibliographyItem": "MPBibliographyItem:test",
        "objectType": "MPCitationItem",
      },
    ],
    "objectType": "MPCitation",
  },
  Object {
    "_id": "MPCitation:test",
    "embeddedCitationItems": Array [
      Object {
        "_id": "MPCitationItem:test",
        "bibliographyItem": "MPBibliographyItem:test",
        "objectType": "MPCitationItem",
      },
    ],
    "objectType": "MPCitation",
  },
  Object {
    "_id": "MPCitation:test",
    "embeddedCitationItems": Array [
      Object {
        "_id": "MPCitationItem:test",
        "bibliographyItem": "MPBibliographyItem:test",
        "objectType": "MPCitationItem",
      },
    ],
    "objectType": "MPCitation",
  },
  Object {
    "_id": "MPCitation:test",
    "embeddedCitationItems": Array [
      Object {
        "_id": "MPCitationItem:test",
        "bibliographyItem": "MPBibliographyItem:test",
        "objectType": "MPCitationItem",
      },
    ],
    "objectType": "MPCitation",
  },
  Object {
    "_id": "MPCitation:test",
    "embeddedCitationItems": Array [
      Object {
        "_id": "MPCitationItem:test",
        "bibliographyItem": "MPBibliographyItem:test",
        "objectType": "MPCitationItem",
      },
    ],
    "objectType": "MPCitation",
  },
  Object {
    "_id": "MPCitation:test",
    "embeddedCitationItems": Array [
      Object {
        "_id": "MPCitationItem:test",
        "bibliographyItem": "MPBibliographyItem:test",
        "objectType": "MPCitationItem",
      },
    ],
    "objectType": "MPCitation",
  },
  Object {
    "_id": "MPCitation:test",
    "embeddedCitationItems": Array [
      Object {
        "_id": "MPCitationItem:test",
        "bibliographyItem": "MPBibliographyItem:test",
        "objectType": "MPCitationItem",
      },
    ],
    "objectType": "MPCitation",
  },
  Object {
    "_id": "MPCitation:test",
    "embeddedCitationItems": Array [
      Object {
        "_id": "MPCitationItem:test",
        "bibliographyItem": "MPBibliographyItem:test",
        "objectType": "MPCitationItem",
      },
    ],
    "objectType": "MPCitation",
  },
  Object {
    "_id": "MPCitation:test",
    "embeddedCitationItems": Array [
      Object {
        "_id": "MPCitationItem:test",
        "bibliographyItem": "MPBibliographyItem:test",
        "objectType": "MPCitationItem",
      },
    ],
    "objectType": "MPCitation",
  },
  Object {
    "_id": "MPCitation:test",
    "embeddedCitationItems": Array [
      Object {
        "_id": "MPCitationItem:test",
        "bibliographyItem": "MPBibliographyItem:test",
        "objectType": "MPCitationItem",
      },
    ],
    "objectType": "MPCitation",
  },
  Object {
    "_id": "MPCitation:test",
    "embeddedCitationItems": Array [
      Object {
        "_id": "MPCitationItem:test",
        "bibliographyItem": "MPBibliographyItem:test",
        "objectType": "MPCitationItem",
      },
    ],
    "objectType": "MPCitation",
  },
  Object {
    "_id": "MPCitation:test",
    "embeddedCitationItems": Array [
      Object {
        "_id": "MPCitationItem:test",
        "bibliographyItem": "MPBibliographyItem:test",
        "objectType": "MPCitationItem",
      },
    ],
    "objectType": "MPCitation",
  },
  Object {
    "_id": "MPCommentAnnotation:test",
    "annotationColor": "rgb(250, 224, 150)",
    "contents": "eXtyles test comment",
    "contributions": Array [
      Object {
        "_id": "MPContribution:test",
        "objectType": "MPContribution",
        "profileID": "MPUserProfile:test",
        "timestamp": 1111111111,
      },
    ],
    "objectType": "MPCommentAnnotation",
    "target": "MPBibliographyItem:test",
  },
]
`;

exports[`JATS importer parses full JATS no back example to Manuscripts models 1`] = `
Array [
  Object {
    "_id": "MPTitles:test",
    "objectType": "MPTitles",
    "title": "A complete manuscript",
  },
  Object {
    "_id": "MPManuscript:test",
    "articleType": "other",
    "equationCount": 0,
    "figureCount": 0,
    "genericCounts": Array [
      Object {
        "count": 0,
        "countType": "box",
      },
    ],
    "objectType": "MPManuscript",
    "referencesCount": 2,
    "tableCount": 0,
    "wordCount": 2910,
  },
  Object {
    "ISSNs": Array [],
    "_id": "MPJournal:test",
    "abbreviatedTitles": Array [],
    "journalIdentifiers": Array [],
    "objectType": "MPJournal",
  },
  Object {
    "_id": "MPTitles:test",
    "objectType": "MPTitles",
    "runningTitle": "",
    "subtitle": "",
    "title": "",
  },
  Object {
    "_id": "MPSection:test",
    "elementIDs": Array [],
    "objectType": "MPSection",
    "path": Array [
      "MPSection:test",
    ],
    "priority": 1,
    "title": "",
  },
]
`;

exports[`JATS importer parses full JATS no body example to Manuscripts models 1`] = `
Array [
  Object {
    "_id": "MPTitles:test",
    "objectType": "MPTitles",
    "title": "A complete manuscript",
  },
  Object {
    "_id": "MPManuscript:test",
    "articleType": "other",
    "equationCount": 0,
    "figureCount": 0,
    "genericCounts": Array [
      Object {
        "count": 0,
        "countType": "box",
      },
    ],
    "objectType": "MPManuscript",
    "referencesCount": 2,
    "tableCount": 0,
    "wordCount": 2910,
  },
  Object {
    "ISSNs": Array [],
    "_id": "MPJournal:test",
    "abbreviatedTitles": Array [],
    "journalIdentifiers": Array [],
    "objectType": "MPJournal",
  },
]
`;

exports[`JATS importer parses minimal JATS body to a ProseMirror doc 1`] = `
Object {
  "content": Array [
    Object {
      "attrs": Object {
        "dataTracked": null,
        "runningTitle": "",
        "subtitle": "",
        "title": "",
      },
      "type": "titles",
    },
    Object {
      "attrs": Object {
        "category": "",
        "comments": null,
        "dataTracked": null,
        "generatedLabel": undefined,
        "pageBreakStyle": undefined,
        "titleSuppressed": false,
      },
      "content": Array [
        Object {
          "attrs": Object {
            "dataTracked": null,
          },
          "type": "section_title",
        },
      ],
      "type": "section",
    },
    Object {
      "content": Array [
        Object {
          "type": "comment_list",
        },
      ],
      "type": "meta_section",
    },
  ],
  "type": "manuscript",
}
`;
